feat(azure_openai): add o3-mini support

--- a/models/azure_openai/provider/azure_openai.yaml
+++ b/models/azure_openai/provider/azure_openai.yaml
@@ -125,6 +125,12 @@ model_credential_schema:
               variable: __model_type
           value: gpt-4-32k
         - label:
+            en_US: o3-mini
+          show_on:
+            - value: llm
+              variable: __model_type
+          value: o3-mini
+        - label:
             en_US: o1-mini
           show_on:
             - value: llm
